Minor UI fixes
Truncating the strings when the window is narrowed down

--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -19,6 +19,17 @@ body {
   background-color: #1baae1;
   overflow: auto;
   color:white;
+
+}
+
+.truncatedText {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.preferencesCategoryText {
+  padding-right: 20px;
 }
 
 .mainContent {
